[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clustering-exploration"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
    { name = "Kenneth Yang", email = "microbob@is88.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "notebook==7.3.2",
    "polars==1.22.0",
    "matplotlib==3.10.0",
    "numpy==2.2.3",
    "pillow==11.1.0",
    "tqdm==4.67.1",
    "ipywidgets==8.1.5",
    "joblib==1.4.2",
    "scikit-learn==1.6.1"
]

[project.urls]
Documentation = "https://github.com/Kenneth Yang/clustering-exploration#readme"
Issues = "https://github.com/Kenneth Yang/clustering-exploration/issues"
Source = "https://github.com/Kenneth Yang/clustering-exploration"

[tool.hatch.version]
path = "src/clustering_exploration/__about__.py"

[tool.hatch.envs.default]
installer = "uv"
python = "3.13"
dependencies = [
    "pandas==2.2.3"
]

[tool.ruff]
exclude = ["src/jiexiao", "tests"]
unsafe-fixes = true

[tool.ruff.lint]
ignore = ["T201"]